[package]
name = "molecular-disruption-device"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "molecular-disruption-device"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
actix-web = "3.3.2"
actix = "0.10.0"
actix-web-actors = "3.0.0"
dns-lookup = "1.0.5"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "molecular-disruption-device"
path = "src/main.rs"
